# agentic_ai

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  demo.ipynb  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  secret-scan.yml
data/: train.jsonl
src/agentic_ai/: __init__.py  agent.py  app.py  cli.py  config.py  datasets_download.py  embeddings.py  eval.py  lc_pipeline.py  llm.py  retriever.py  vectorstore.py
tests/: test_index_and_query.py
